<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="-1dp">

        <EditText
            android:id="@+id/heightcm"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:ems="10"
            android:hint="@string/heighthint"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/weightkg"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:ems="10"
            android:hint="@string/weighthint"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/ageyears"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:ems="10"
            android:hint="@string/agehint"
            android:inputType="number"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:backgroundTint="#009688"
            android:text="@string/finalresult"
            android:textColor="#0C5B81"
            android:textColorHint="#FF0000"
            android:textColorLink="#000000" />

        <TextView
            android:id="@+id/bmivalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:text=""
            android:textSize="24sp" />

        <TextView
            android:id="@+id/finalresult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:layout_marginTop="30sp"
            android:text="@string/str1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:gravity="center"
            android:text="@string/disclaimer" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>